[package]
name = "audiobook-tagger"
version = "0.2.1"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["cargo"] }
glob = "0.3.1"
id3 = "1.14.0"
mp3-duration = "0.1.10"
prettytable-rs = "0.10.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
tempfile = "3.12.0"
thiserror = "1.0.63"
toml = { version = "0.8.19", features = ["parse"] }
